# advent-2021

./: Cargo.toml  README.md
inputs/: day24.txt
src/: lib.rs
