[package]
name = "advent-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
nalgebra = "0.29.0"
nom = "7.1.0"
num-traits = "0.2"
once_cell = "1.8.0"
rayon = "1.5.1"
regex = "1.5"
serde_json = "1.0.0"

[dev-dependencies]
indoc = "1.0"
